--- a/StyleBg.css
+++ b/StyleBg.css
@@ -28,7 +28,7 @@ html, body {
 }
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%);
+    background: linear-gradient(135deg, #ff0000 0%, #1a1a1a 100%);
     height: 100vh;
     overflow: hidden;
     -webkit-text-size-adjust: 100%;
@@ -413,3 +413,4 @@ body {
         overscroll-behavior-y: none;       /* ← второе главное */
     }
 }
+
